# audiobridge

./: CMakeLists.txt  INSTALL.md  LICENSE  README.md  build.bat  build.sh  create_placeholder_icons.sh  install_dependencies_ubuntu.sh  make_scripts_executable.sh
include/: audiomanager.h  mainwindow.h  networkmanager.h
resources/: resources.qrc
resources/icons/: README.md
resources/styles/: dark_style.qss  light_style.qss
src/: audiomanager.cpp  main.cpp  mainwindow.cpp  networkmanager.cpp
ui/: mainwindow.ui
